--- a/front/src/App.css
+++ b/front/src/App.css
@@ -5,7 +5,22 @@
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
+  
 }
 /* img{
     width: 400px;
 } */
+.navbar{
+    padding-top: 10px;
+    width: 98.5%;
+    z-index: 1000;
+    top: 0;
+
+
+}
+.navbar.sticky{
+    background:'#1C1C1C';
+    /* padding-top: 10px; */
+    position: fixed;
+    box-shadow:  0 2px 10px rgba(0, 0, 0, 0.3);
+}
